--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -23,4 +23,7 @@
     <item
         android:id="@+id/item_twitter"
         android:title="Twitter" />
+    <item
+        android:id="@+id/item_survey"
+        android:title="Survey" />
 </menu>
